# op-replay-clipper

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.dockerignore  Dockerfile.web  LICENSE.md  Makefile  README.md  clip.py  clip.sh  clip_pipeline.py  cog-rfdetr-repro.yaml  cog_predictor.py  cog_rfdetr_repro_predictor.py  comma_watch.py  docker-compose.yml  downloader.py  driver_face_benchmark.py  driver_face_donor_sweep.py  driver_face_eval.py  driver_face_reintegrate.py  ffmpeg_clip.py  forked_openpilot_clip.py  install.sh  local_clip.py  local_ui_clip.py  op-replay-clipper.code-workspace  openpilot_compat.py  openpilot_setup.py  predict.py  pyproject.toml  replicate_remote.py  replicate_run.py  requirements-rfdetr-repro-cog.txt  rf_detr_repro_run.py  route_or_url.py  runtime_env.py  (+3 more)
.devcontainer/: devcontainer.json  docker-compose.yml
cog/: README.md  cog-rfdetr-repro.template.yaml  cog.template.yaml  docker-compose.yml  generate.sh  render_artifacts.sh  render_cog_yaml.py  render_config.py  setup.sh
common/: bootstrap_image_env.sh  bootstrap_rfdetr_repro_env.sh  build_linux_pyray_null_egl.py  render_mici_smoke.sh  setup.sh
core/: __init__.py  clip_orchestrator.py  driver_face_auto_select.py  driver_face_benchmark_worker.py  driver_face_bridge_debug.py  driver_face_donor_sweep.py  driver_face_eval.py  driver_face_eval_worker.py  driver_face_pose_debug.py  driver_face_reintegrate.py  driver_face_swap.py  driver_facefusion_headless.py  forward_upon_wide.py  openpilot_bootstrap.py  openpilot_config.py  openpilot_integration.py  qcamera_audio.py  render_runtime.py  rf_detr_repro.py  rf_detr_runtime.py  route_downloader.py  route_inputs.py  ui_layouts.py
docs/: deploying-to-replicate.md  prod-readiness-checklist.md  routeinfo-sample.json  runtime-patching-and-ui-rendering.md  upstream-modifications.md
op-replay-clipper-app/: README.md  app.py  install.sh  requirements.txt
op-replay-clipper-desktop/: README.md  install.sh  package.json
op-replay-clipper-desktop/src-tauri/: Cargo.toml  tauri.conf.json
op-replay-clipper-desktop/src-tauri/src/: main.rs
renderers/: __init__.py  big_ui_engine.py  driver_debug_engine.py  driver_debug_renderer.py  path_overlay_360.py  styled_text.py  ui_360_renderer.py  ui_renderer.py  video_renderer.py
scripts/: acquire_t4_gce_instance.sh  bootstrap_t4_gce_vm.sh  delete_t4_gce_instance.sh  image_size_breakdown.sh  rf_detr_repro.py  (+10 more)
ui_clipper/: Cargo.toml
ui_clipper/src/: main.rs  xtigervnc.rs
(+63 files in other folders)
