[package]
name = "ui_clipper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
tmux_interface = { version = "0.2.1", default-features = false, features = ["tmux_3_0a"] }
