[package]
name = "op-replay-clipper-desktop"
version = "0.1.0"
edition = "2021"
description = "Native desktop app for OP Replay Clipper"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
